src/ui/snapshots/state/default/post_completion/all_failed.snap
---
source: src/ui/state/default/post_completion.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │🏷️  Post-Completion Processing                                                                                      │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Progress────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │██████████████████████████████████████████████✅ All tasks completed! ██████████████████████████████████████████████│ " Hidden by multi-width symbols: [(49, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Tasks───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │❌ Tag PR #100: Fix login bug - Error: Service unavailable: Unable to connect to Azure DevOps                       │ " Hidden by multi-width symbols: [(3, " ")]
" │❌ Update WI #1001 to 'Next Merged': Implement user authentication - Error: Service unavailable: Unable to connect  │ " Hidden by multi-width symbols: [(3, " ")]
" │to Azure DevOps                                                                                                     │ "
" │❌ Tag PR #101: Update user profile page design - Error: Service unavailable: Unable to connect to Azure DevOps     │ " Hidden by multi-width symbols: [(3, " ")]
" │❌ Update WI #1002 to 'Next Merged': User profile redesign - Error: Service unavailable: Unable to connect to Azure │ " Hidden by multi-width symbols: [(3, " ")]
" │DevOps                                                                                                              │ "
" │❌ Tag PR #102: Add analytics tracking - Error: Service unavailable: Unable to connect to Azure DevOps              │ " Hidden by multi-width symbols: [(3, " ")]
" │❌ Update WI #1003 to 'Next Merged': Analytics implementation - Error: Service unavailable: Unable to connect to    │ " Hidden by multi-width symbols: [(3, " ")]
" │Azure DevOps                                                                                                        │ "
" │❌ Tag PR #103: Database schema changes - Error: Service unavailable: Unable to connect to Azure DevOps             │ " Hidden by multi-width symbols: [(3, " ")]
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │🎉 All post-completion tasks have been processed!                                                                   │ " Hidden by multi-width symbols: [(3, " ")]
" │                                                                                                                    │ "
" │✅ PRs tagged with 'merged/v1.0.0'                                                                                  │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
