src/ui/snapshots/state/default/post_completion/display.snap
---
source: src/ui/state/default/post_completion.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │🏷️  Post-Completion Processing                                                                                      │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Progress────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │████████████████████████████████████████████████No tasks to process ████████████████████████████████████████████████│ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Tasks───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │No tasks to process.                                                                                                │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │Processing tasks automatically...                                                                                   │ "
" │                                                                                                                    │ "
" │🏷️  Tagging PRs with 'merged/v1.0.0'                                                                                │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
