src/ui/snapshots/state/default/post_completion/mixed_errors.snap
---
source: src/ui/state/default/post_completion.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │🏷️  Post-Completion Processing                                                                                      │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Progress────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │██████████████████████████████████████████████✅ All tasks completed! ██████████████████████████████████████████████│ " Hidden by multi-width symbols: [(49, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Tasks───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │✅ Tag PR #100: Fix login bug                                                                                       │ " Hidden by multi-width symbols: [(3, " ")]
" │❌ Update WI #1001 to 'Next Merged': Implement user authentication - Error: Network error: Connection timed out     │ " Hidden by multi-width symbols: [(3, " ")]
" │after 30 seconds                                                                                                    │ "
" │❌ Tag PR #101: Update user profile page design - Error: 403 Forbidden: Insufficient permissions                    │ " Hidden by multi-width symbols: [(3, " ")]
" │✅ Update WI #1002 to 'Next Merged': User profile redesign                                                          │ " Hidden by multi-width symbols: [(3, " ")]
" │❌ Tag PR #102: Add analytics tracking - Error: API Error: Rate limit exceeded, retry after 60 seconds              │ " Hidden by multi-width symbols: [(3, " ")]
" │❌ Update WI #1003 to 'Next Merged': Analytics implementation - Error: Invalid request: Work item ID not found      │ " Hidden by multi-width symbols: [(3, " ")]
" │✅ Tag PR #103: Database schema changes                                                                             │ " Hidden by multi-width symbols: [(3, " ")]
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │🎉 All post-completion tasks have been processed!                                                                   │ " Hidden by multi-width symbols: [(3, " ")]
" │                                                                                                                    │ "
" │✅ PRs tagged with 'merged/v1.0.0'                                                                                  │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
