src/ui/snapshots/state/default/post_completion/partially_updated.snap
---
source: src/ui/state/default/post_completion.rs
expression: harness.backend()
---
"                                                                                "
" ┌────────────────────────────────────────────────────────────────────────────┐ "
" │🏷️  Post-Completion Processing                                              │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Progress────────────────────────────────────────────────────────────────────┐ "
" │███████████████████████████Processing task 3 of 7                           │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Tasks───────────────────────────────────────────────────────────────────────┐ "
" │✅ Tag PR #100: Fix login bug                                               │ " Hidden by multi-width symbols: [(3, " ")]
" │⚡ Update WI #1001 to 'Next Merged': Implement user authentication          │ " Hidden by multi-width symbols: [(3, " ")]
" │⏳ Tag PR #101: Update user profile page design                             │ " Hidden by multi-width symbols: [(3, " ")]
" │❌ Update WI #1002 to 'Next Merged': User profile redesign - Error: 403     │ " Hidden by multi-width symbols: [(3, " ")]
" │Forbidden: Insufficient permissions to update work item                     │ "
" │❌ Tag PR #102: Add analytics tracking - Error: Network error: Connection   │ " Hidden by multi-width symbols: [(3, " ")]
" │timed out after 30 seconds                                                  │ "
" │⏳ Update WI #1003 to 'Next Merged': Analytics implementation               │ " Hidden by multi-width symbols: [(3, " ")]
" │⏳ Tag PR #103: Database schema changes                                     │ " Hidden by multi-width symbols: [(3, " ")]
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────┐ "
" │Processing tasks automatically...                                           │ "
" │                                                                            │ "
" │🏷️  Tagging PRs with 'merged/v1.0.0'                                        │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
