src/ui/snapshots/state/default/post_completion/permission_errors.snap
---
source: src/ui/state/default/post_completion.rs
expression: harness.backend()
---
"                                                                                "
" ┌────────────────────────────────────────────────────────────────────────────┐ "
" │🏷️  Post-Completion Processing                                              │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Progress────────────────────────────────────────────────────────────────────┐ "
" │██████████████████████████✅ All tasks completed! ██████████████████████████│ " Hidden by multi-width symbols: [(29, " ")]
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Tasks───────────────────────────────────────────────────────────────────────┐ "
" │✅ Tag PR #100: Fix login bug                                               │ " Hidden by multi-width symbols: [(3, " ")]
" │❌ Update WI #1001 to 'Next Merged': Implement user authentication - Error: │ " Hidden by multi-width symbols: [(3, " ")]
" │403 Forbidden: Insufficient permissions to update work item                 │ "
" │✅ Tag PR #101: Update user profile page design                             │ " Hidden by multi-width symbols: [(3, " ")]
" │❌ Update WI #1002 to 'Next Merged': User profile redesign - Error: 403     │ " Hidden by multi-width symbols: [(3, " ")]
" │Forbidden: User does not have write access to this resource                 │ "
" │✅ Tag PR #102: Add analytics tracking                                      │ " Hidden by multi-width symbols: [(3, " ")]
" │❌ Update WI #1003 to 'Next Merged': Analytics implementation - Error: 403  │ " Hidden by multi-width symbols: [(3, " ")]
" │Forbidden: Access denied for tag creation                                   │ "
" │✅ Tag PR #103: Database schema changes                                     │ " Hidden by multi-width symbols: [(3, " ")]
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────┐ "
" │🎉 All post-completion tasks have been processed!                           │ " Hidden by multi-width symbols: [(3, " ")]
" │                                                                            │ "
" │✅ PRs tagged with 'merged/v1.0.0'                                          │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
